--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 export BUILDPACK_URL=https://github.com/mbuchetics/heroku-buildpack-nodejs-grunt.git
-export port=81
+export PORT=81
+export NODE_ENV=production
